[project]
name = "simple-portfolio-tracker"
version = "0.1.0"
description = "Minimal Dashboard to Display Stock Portfolio based on Google Spreadsheet Data"
authors = [
    {name = "Seohyun Jung",email = "jsh318900@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client (>=2.167.0,<3.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "simple_portfolio_tracker", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
